[package]
name = "ubit"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
categories = [ "hardware-support", "embedded", "no-std", ]
description = "Things for the BBC Micro:bit"
keywords = [ "arm", "cortex-m", "nrf51", ]
license = "MIT"
readme = "README.md"
repository = "https://bitbucket.org/blueluna/ubit"
edition = "2018"

[dependencies]
byteorder = { version = "1", default-features = false }
nrf51 = "0.6"
nrf51-hal = "0.6"

[dev-dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6"
panic-semihosting = "0.5"
cortex-m-rtfm = "0.4"